k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ft-lgtm-ingress
spec:
  rules:
  - http:
      paths:
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: ft-lgtm-backend
            port:
              number: 11000
      - path: /
        pathType: Prefix
        backend:
          service:
            name: ft-lgtm-frontend
            port:
              number: 11001
